examples/Passing/Variables/assign_mul.c
int main() {
    int a = 6;
    a *= 5;
    return a;
}
