examples/Failing/Variables/fail_add.c
int main() {
    int a = 5;
    (a + 5) += 6;
    return a;
}
